BUGFIX: Prevent jumping when hovering commands with long description

--- a/packages/commandbar/src/components/CommandListItem/CommandListItem.module.css
+++ b/packages/commandbar/src/components/CommandListItem/CommandListItem.module.css
@@ -42,7 +42,7 @@
 }
 
 .favouriteButton {
-    display: none;
+    visibility: hidden;
     border: none;
     background: none;
     cursor: pointer;
@@ -56,7 +56,7 @@
 }
 
 .commandListItem:hover .favouriteButton {
-    display: block;
+    visibility: visible;
 }
 
 .isFavourite {
